force-app/main/default/objects/VisualAntidote__Document__c/fields/VisualAntidote__Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Field_Mappings__c</fullName>
    <label>Field Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>