force-app/main/default/objects/VisualAntidote__Document__c/fields/VisualAntidote__IsActive__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>