force-app/main/default/objects/VisualAntidote__Document__c/fields/VisualAntidote__Platform_Account__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Platform_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform Account</label>
    <referenceTo>VisualAntidote__Platform_Account__c</referenceTo>
    <relationshipLabel>Formstack Documents</relationshipLabel>
    <relationshipName>Formstack_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>